OpenRewrite: Upgrade to Spring Boot 3